# SDLGraphics

./: CMakeLists.txt  CommonStructs.h  GGraphicalComponent.cpp  GGraphicalComponent.h  GMatrix.h  GRectangleTexture.cpp  GRectangleTexture.h  GTexturePolygon.cpp  GTexturePolygon.h  GTextureSet.cpp  GTextureSet.h  GVector.h  MainWindow.cpp  MainWindow.h  Makefile  WorldObject.h  WorldPosition.cpp  WorldPosition.h  devNotes.txt  main.cpp  readme.txt
assets/: fragment.glsl  vertex.glsl
include/GEngine/: Entity.h  GAssetManager.h  GCommonStructs.h  GMatrix.h  GMesh.h  GMeshBuilder.h  GMeshManager.h  GQuaternion.h  GShaderLoader.h  GTextureManager.h  MainWindow.h  WorldPosition.h
include/glad/: glad.h
src/: GAssetManager.cpp  GMesh.cpp  GMeshBuilder.cpp  GMeshManager.cpp  GShaderLoader.cpp  GTextureManager.cpp  MainWindow.cpp  WorldPosition.cpp  glad.c  main.cpp
